src/p2/kubeconfig/web1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: web1
          image: app1:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
