src/p2/kubeconfig/web3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
